--- a/src/db/isogit-yaml/renderer/status.scss
+++ b/src/db/isogit-yaml/renderer/status.scss
@@ -33,5 +33,6 @@
 :local .base {
   display: flex;
   flex-flow: column nowrap;
-  align-items: flex-start;
+  align-items: stretch;
+  overflow: hidden;
 }
