--- a/src/db/renderer/status.scss
+++ b/src/db/renderer/status.scss
@@ -2,11 +2,13 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  font-size: 120%;
+  white-space: nowrap;
 }
 
 :local .backendType {
-  opacity: .5;
-  font-size: 80%;
-  margin-left: .5rem;
+  white-space: nowrap;
+}
+
+:local .backendDetails {
+  margin-top: .5rem;
 }
