feat: Disable pointer cursors on BP3 components

--- a/src/app/renderer.css
+++ b/src/app/renderer.css
@@ -18,6 +18,14 @@ html.platform--win32::before {
   background-color: silver;
 }
 
+.bp3-tree-node-caret {
+  cursor: default !important;
+}
+
+.bp3-html-select select {
+  cursor: default !important;
+}
+
 .bp3-button {
   cursor: default !important;
 
