--- a/src/app/renderer.css
+++ b/src/app/renderer.css
@@ -6,6 +6,14 @@ body, html {
   height: 100%;
 }
 
+.initial-spinner {
+  position: absolute;
+  display: block;
+  top: 50vh;
+  left: 50vw;
+  transform: translateY(-50%) translateX(-50%);
+}
+
 html.platform--win32::before {
   content: " ";
   position: absolute;
