feat: Improve settings screen

--- a/src/settings/styles.scss
+++ b/src/settings/styles.scss
@@ -13,6 +13,12 @@ html, body, #app {
   background: $pt-app-background-color;
 }
 
+:local .tabs {
+  :global .bp3-tab-panel {
+    flex: 1;
+  }
+}
+
 :local .base {
   padding: 2rem;
   flex: 1;
